[package]
name = "kumar-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
anyhow = "1.0.98"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.songbird]
version = "0.4.6"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5"
features = ["aac", "mp3", "isomp4", "alac"]



